[package]
name = "maestro-http"
version = "0.1.0"
edition = "2024"
authors = ["Otabek"]
description = "Maestro HTTP - simple async PHP-style HTTP client in Rust"
license = "MIT"
repository = "https://github.com/Famous-Coder36/maestro-http"
readme = "README.md"
keywords = ["http", "async", "client", "maestro", "php-style"]
categories = ["web-programming", "network-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
